# projet-prophecy-bloc6

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
api/routers/: reassort.py  segmentation.py
api/services/: reassort_service.py  segmentation_service.py
data/: products_stock.csv  rfm_segments.csv  suppliers.csv
models/: kmeans_bundle_v1.joblib
streamlit/: Dockerfile  api_client.py  app.py  dashboard_page.py  formatting.py  prophecy_styles.css  reassort_page.py  segmentation_page.py
streamlit/.streamlit/: config.toml
streamlit/pages/: 1_reassort.py  2_segmentation.py
train/reassort/: final_main.ipynb  first_main.ipynb  predict.py  secod_rolling_main.ipynb
train/segmentation/: rfm_segment.ipynb  train_kmeans.ipynb
